test/errors/load-invalid.tcf
MODULE ../misc/vecadd.spvasm
ENTRY vecadd

BUFFER a 64 FILL INT32 19
BUFFER b 60 FILL INT32 23
BUFFER c 64 FILL INT32 0

DESCRIPTOR_SET 0 0 a
DESCRIPTOR_SET 0 1 b
DESCRIPTOR_SET 0 2 c

DISPATCH 16 1 1

DUMP INT32 c

# CHECK: Invalid load of 4 bytes from memory address 0x
# CHECK: Entry point: %1 vecadd
# CHECK: Invocation: Global(15,0,0) Local(0,0,0) Group(15,0,0)
# CHECK: = OpLoad %

# CHECK: Buffer 'c' (64 bytes):
# CHECK:   c[0] = 42
# CHECK:   c[1] = 42
# CHECK:   c[2] = 42
# CHECK:   c[3] = 42
# CHECK:   c[4] = 42
# CHECK:   c[5] = 42
# CHECK:   c[6] = 42
# CHECK:   c[7] = 42
# CHECK:   c[8] = 42
# CHECK:   c[9] = 42
# CHECK:   c[10] = 42
# CHECK:   c[11] = 42
# CHECK:   c[12] = 42
# CHECK:   c[13] = 42
# CHECK:   c[14] = 42
# CHECK:   c[15] =
